--- a/index.html
+++ b/index.html
@@ -4,17 +4,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homepage</title>
+    <title>Status Page</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Home</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
-    <script src="index.js"></script>
+    <header>
+      <h1>Project Planet NOW!</h1>
+    </header>
+    <div class="grid-wrapper">
+
+      <div class="grid-item">
+        <section class="sun">
+          <img src="Sun.png" 
+        alt="Yellow Circle";
+        />
+          <h2>Sun</h2>
+          <p>Type G2V</p>
+          <button type="button" onclick="alert('We are currently working to optimize sun efficiency on Earth, by using advanced technology to control the rotation of the sun.')" id="sunip" >View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="mercury">
+          <img src="Mecury.png" 
+          alt="Grey Circle";
+          />
+          <h3>Mercury</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('We have landed a new rover to collect more recent samples.')" id="mercuryip" >View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="venus">
+          <img src="Venus.png" 
+          alt="Tan Circle";
+          />
+          <h3>Venus</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('We are testing samples recently collected for an alternative to fossil fuel.')" id="venusip">View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="earth">
+          <img src="Earth.png" 
+          alt="Blue Circle";
+          />
+          <h3>Earth</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('Currently exploring new depths of the ocean with hopes of discovering new species. ')" id="earthip" >View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="mars">
+          <img src="Mars.png" 
+          alt="Brown Circle";
+          />
+          <h3>Mars</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('We are sending a test group to live here and test the livability status for potential relocation in the future.')" id="marsip" >View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="jupiter">
+          <img src="Jupiter.png" 
+          alt="Beige Circle";
+          />
+          <h3>Jupiter</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('Landed a rover to explore the planet for ice samples that could create a new type of dry ice.')" id="jupiterip">View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="saturn">
+          <img src="Saturn.png" 
+          alt="Pink Circle";
+          />
+          <h3>Saturn</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('We are collecting samples from the Saturn ring to create new forms of anesthesia. ')" id="saturnip">View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="uranus">
+          <img src="Uranus.png" 
+          alt="Light Blue Circle";
+          />
+          <h3>Uranus</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('Working on finding a faster route to get to this planet.')" id="uranusip" >View Updates</button>
+        </section>
+      </div>
+
+      <div class="grid-item">
+        <section class="neptune">
+          <img src="Neptune.png" 
+          alt="Blue Circle";
+          />
+          <h3>Neptune</h3>
+          <p>AU Distance</p>
+          <button type="button" onclick="alert('Exploring for extraterrestrial species that we can dissect if possible. ')" id="neptuneip">View Updates</button>
+        </section>
+      </div>
+      
+     </div>
   </body>
 </html>
